# dark8

./: ## Chat Customization Diagnostics.md  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURE_MATRIX.md  FINAL_DELIVERY_SUMMARY.md  LICENSE  MODULES_COMPLETE_INVENTORY.md  Makefile  PHASE2_REPORT.md  PHASE2_SUMMARY.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  PROPOSED_REORG.md  QUICKSTART.md  README.md  README_DEPLOY.md  README_PHASE2.md  README_agent_local.md  RELEASE_DRAFT_v0.4.0.md  STRUCTURE_INFO.md  convert_to_onnx.py  dark8_build.py  dark8_console.bat  dark8_gui.py  dark8_interpreter.py  dark8_llm_os_api.py  dark8_memory.json  dataset_intents.jsonl  dbg_bm25.db  docker-compose.yml  export_intents_to_onnx.py  generate_dataset.py  (+17 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci-build.yml  dark8-core.yml  deploy.yml  lang-ci.yml  quality.yml  tests.yml
DARK8_BAREMETAL/: Makefile  Makefile.save
DARK8_BAREMETAL/bootloader/: boot.asm  kernel.asm  stage2.asm
DARK8_BAREMETAL/kernel/: idt.c  idt.h  idt_load.asm  isr.asm  kernel.asm  kernel.c  kernel.elf  keyboard.c  keyboard.h  linker.ld  paging.c  paging.h  pic.c  pic.h
agent_local/: Dockerfile  main.py  requirements.txt
browser/: index.html  package.json
browser/src/: App.svelte  main.ts
browser/src-tauri/: tauri.conf.json
cli/: __init__.py
config/: ollama.yaml
dark8_core/: __init__.py  __main__.py  boot.py  config.py  dashboard.py  improvement.py  logger.py  multi_agent.py  performance.py  phase2.py  reasoning_advanced.py  security.py
dark8_core/agent/: AGENT_SPEC.md  SEARCH_SPEC.md  __init__.py  learning.py  reasoning.py
dark8_core/browser/: __init__.py  advanced.py
dark8_core/infrastructure/: api_gateway.py  ci_cd.py  database_replication.py  disaster_recovery.py  kubernetes.py  load_balancer.py  monitoring.py  profiler.py  prometheus_exporter.py
dark8_core/llm/: __init__.py
dark8_core/nlp/: __init__.py  advanced.py  bert.py
dark8_core/persistence/: __init__.py  migrations.py
dark8_core/plugins/: sample_search_plugin.py
dark8_core/programmer/: __init__.py  advanced.py
dark8_core/search/: __init__.py  base.py  engine.py  indexer.py  matcher.py  ranking.py  sources.py
dark8_core/tools/: __init__.py
dark8_core/ui/: __init__.py  api.py  cli.py
dark8_mark01/: __init__.py  capabilities.py  command_registry.py  config.py  dark8_boot.py  dark8_chat.py  dark8_context_parser.py  dark8_core_paths.py  dark8_intents_pl.py  dark8_learning.py  dark8_meta_meta.py  dark8_self_diagnostics.py  dark8_self_repair.py  dark8_uci.py  logger.py  main.py  mpx_parser.py  system.db
dark8_mark01/agent/: agent_core.py  agent_mpx_builder.py  agent_plan.py  agent_runner.py  autonomic_agent.py  planner.py  self_improve.py  task_manager.py
dark8_mark01/commands/: __init__.py  exec_ops.py  file_ops.py  flow_ops.py  patch_ops.py
dark8_mark01/core/: actions.py  agent.py  command_router.py  context.py  dark8_core.py  dark8_core_backend.py  dark8_core_loop.py  dispatcher.py  maxscript_parser.py  task_context.py  task_router.py  task_runner.py
dark8_mark01/devices/: device_manager.py  usb_scanner.py  wifi_scanner.py
dark8_mark01/jobs/: job_manager.py
dark8_mark01/memory/: memory_context.py  memory_engine.py  memory_manager.py  memory_store.py
dark8_mark01/meta/: code_editor.py  meta_agent.py
dark8_mark01/migrations/: __init__.py  m0001_initial_config.py  m0002_logger.py  m0003_capabilities.py  m0004_pending_actions.py  migration_manager.py  pending_actions.py
dark8_mark01/plugins/: __init__.py  command_list.py  config.py  log_plus.py  macro.py  sample_plugin.py  script_import.py  self_patch.py  update_system.py
dark8_mark01/tools/: codegen.py  compiler.py  file_editor.py  project_builder.py
dark8_mark01/ui/: dark8_shell_main.py  dark8_shell_sidebar.py  dark8_shell_topbar.py  dark8_ui_ai_panel.py  dark8_ui_desktop.py  dark8_ui_device_manager.py  dark8_ui_main.py  dark8_ui_theme.py
dark8_mark01/utils/: dark8_auto_fix.py  dark8_backend.py  dark8_code_reader.py  dark8_dashboard.py  dark8_llm.py  dark8_llm_kernel.py  dark8_llm_kernel_v3.py  dark8_llm_os_api.py  dark8_network_core.py  dark8_scheduler.py  dark8_security.py  dark8_state_monitor.py  dark8_watchdog.py  dark8_web_analyze.py  dark8_web_fetch.py  dark8_web_search.py  logger.py
deploy/: dark8-agent.service
docs/: API.md  DEVELOPMENT.md  INSTALLATION.md  SEMANTICS.md  USAGE.md
k8s/: dark8-deployment.yaml  dark8-service.yaml  prometheus-exporter-deployment.yaml
lang/: __init__.py
scripts/: bootstrap.sh  build_images.sh  install_and_run_docker.sh  install_linux.sh  main.mpx  run_dark8.sh  setup_env.bat  setup_env.sh  test_web.mpx
studio/: Cargo.toml  README.md  package.sh
studio/docker/: Dockerfile
studio/src/: main.rs
studio/src-tauri/: tauri.conf.json
tests/: conftest.py  test_agent.py  test_agent_search.py  test_agent_shell_exec.py  test_boot_database.py  test_bulk_insert.py  test_db_helpers.py  test_db_search.py  test_fts.py  test_fts_bm25.py  test_fts_boost.py  test_fuzzy.py  test_indexer_events.py  test_nlp.py  test_plugin_search_registration.py  test_plugins_loader.py  test_search_cache.py  test_search_fts_engine.py  test_search_skeleton.py
web/: index.html  monaco.html
(+142 files in other folders)
