[package]
name = "dark8_studio"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
